docs: move and reorganize docs

--- a/docs/example/cycle/cycle_scoring.ipynb
+++ b/docs/example/cycle/cycle_scoring.ipynb
@@ -3,26 +3,20 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Cycle Scoring\n",
+    "# Scoring\n",
     "This notebook shows how to use autora.cycle scoring tools.\n",
     "\n",
     "We'll be using the [Iris toy dataset](https://scikit-learn.org/stable/datasets/toy_dataset.html#iris-plants-dataset) from sklearn to create a simple logistic regression cycle. This model will classify samples into different species of irises based on flower measurements. The dataset will be split between a training set and test set; the test set will be withheld for the scoring metrics."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -49,10 +43,7 @@
     "Data is split where 33% is reserved for testing."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -65,10 +56,7 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.33, random_state=1)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -80,10 +68,7 @@
     "3. **Experiment Runner** - Creates an oracle that uses the full dataset to match experimental independent variables (flower measurements) and returns the dependent variable (species)."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -155,10 +140,7 @@
     "cycle.run(20)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -176,10 +158,7 @@
     "\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -209,10 +188,7 @@
     "print(f'Specified scorer - precision: {np.around(results_specified_precision, 2).tolist()}')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -221,10 +197,7 @@
     "Note that the \"default scorer\" and \"specified scorer 1\" results should be the same because the `LogisticRegression` estimator's default is the `accuracy_score` function."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -238,10 +211,7 @@
     "Below are several examples."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -275,10 +245,7 @@
     "                 figsize=(5,3));"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -302,10 +269,7 @@
     "                 scorer_kw=dict(average='weighted', zero_division=0));"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -329,10 +293,7 @@
     "                 scorer_kw=dict(average='weighted'));"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -356,10 +317,7 @@
     "                 scorer_kw=dict(average='weighted'));"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -383,10 +341,7 @@
     "                 scorer_kw=dict(average='weighted', multi_class='ovr'));"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -425,10 +380,7 @@
     "fig.axes[0].set_title('Accuracy Over 20 Cycles')\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
